# osw-interpreter

./: CMakeLists.txt  CMakeSettings.json
osw-interpreter/: CMakeLists.txt  main.cpp  osw-interpreter.cpp  osw-interpreter.h
osw-interpreter/examples/: test.osw
